Add package.json and commander packages

--- a/package.json
+++ b/package.json
@@ -2,11 +2,23 @@
   "name": "DynamicProgramming",
   "version": "1.0.0",
   "description": "Overlapping SubProblems - any instance where some larger problem can be decomposed into smaller instances of the same problem",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon"
   },
-  "keywords": ["dynamic programming", "memoization", "tabulation", "alogrithms"],
+  "keywords": [
+    "dynamic programming",
+    "memoization",
+    "tabulation",
+    "alogrithms"
+  ],
   "author": "Wesley L. Handy <wesley@wearecreativ.media>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "commander": "^11.0.0",
+    "inquirer": "^9.2.11"
+  }
 }
